2006-05-29  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libgfortran/27757
	* io/unix.c (fd_seek): Set active to zero.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@114220 138bc75d-0d04-0410-961f-82ee72b054a4